# network-traffic-monitoring

./: .gitignore  README.md  pyproject.toml
dashboard/exports/: export.ndjson
dashboard/queries/: devtools_queries.json
elastic/: mapping.json
src/network_traffic_monitoring/: ingest.py
